--- a/notebooks/add_market_index.ipynb
+++ b/notebooks/add_market_index.ipynb
@@ -2,29 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'D:\\\\dlquant\\\\notebooks'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "当前工作目录：D:\\dlquant\n",
+      "matplotlib显示字体已设置为中文。\n"
+     ]
     }
    ],
    "source": [
-    "import os\n",
-    "os.getcwd()"
+    "! set_jupyter.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "fc521e1c-6927-45d1-ae7c-8edf9fb8690e",
    "metadata": {},
    "outputs": [
@@ -34,12 +31,13 @@
        "'d:\\\\dlquant'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import os\n",
     "os.chdir('d:/dlquant')\n",
     "os.getcwd()\n"
    ]
@@ -56,10 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "fc21642a-a5dc-4a9d-b6e4-855099f91f99",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[32m2024-11-02 10:52:43 | INFO     | download_xt_data:36 - 成功下载股票数据：000001.SH\u001B[0m\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -76,9 +81,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-11-02 10:04:09 | INFO     | download_xt_data:36 - 成功下载股票数据：000001.SH\u001b[0m\n",
-      "\u001b[32m2024-11-02 10:04:09 | INFO     | download_xt_data:36 - 成功下载股票数据：399001.SZ\u001b[0m\n",
-      "\u001b[32m2024-11-02 10:04:09 | INFO     | download_xt_data:36 - 成功下载股票数据：399006.SZ\u001b[0m\n"
+      "\u001B[32m2024-11-02 10:52:44 | INFO     | download_xt_data:36 - 成功下载股票数据：399001.SZ\u001B[0m\n",
+      "\u001B[32m2024-11-02 10:52:44 | INFO     | download_xt_data:36 - 成功下载股票数据：399006.SZ\u001B[0m\n"
      ]
     },
     {
@@ -237,7 +241,7 @@
        "20160108  000001.SH  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,21 +254,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "98eeed20-96c5-4ffc-96ac-7349bebd9c04",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\u001b[1;31mSignature:\u001b[0m\n",
-       " \u001b[0mget_data_from_local\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m\n",
-       "\u001b[0m    \u001b[0mperiod\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'1d'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
-       "\u001b[0m    \u001b[0mstart_time\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mOptional\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
-       "\u001b[0m    \u001b[0mend_time\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mOptional\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
-       "\u001b[0m    \u001b[0mstock_list\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mOptional\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mList\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
-       "\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[0mpandas\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mframe\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-       "\u001b[1;31mDocstring:\u001b[0m\n",
+       "\u001B[1;31mSignature:\u001B[0m\n",
+       " \u001B[0mget_data_from_local\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m\n",
+       "\u001B[0m    \u001B[0mperiod\u001B[0m\u001B[1;33m:\u001B[0m \u001B[0mstr\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;34m'1d'\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\n",
+       "\u001B[0m    \u001B[0mstart_time\u001B[0m\u001B[1;33m:\u001B[0m \u001B[0mOptional\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mstr\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;32mNone\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\n",
+       "\u001B[0m    \u001B[0mend_time\u001B[0m\u001B[1;33m:\u001B[0m \u001B[0mOptional\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mstr\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;32mNone\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\n",
+       "\u001B[0m    \u001B[0mstock_list\u001B[0m\u001B[1;33m:\u001B[0m \u001B[0mOptional\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mList\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mstr\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;32mNone\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\n",
+       "\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;33m->\u001B[0m \u001B[0mpandas\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mcore\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mframe\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mDataFrame\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+       "\u001B[1;31mDocstring:\u001B[0m\n",
        "获取历史股票数据并返回为 pandas DataFrame。\n",
        "\n",
        ":param period: 时间周期，默认 '1d'\n",
@@ -272,8 +276,8 @@
        ":param end_time: 结束时间，格式为 'YYYYMMDD%H%M%S'，默认当前日期\n",
        ":param stock_list: 股票列表，格式为 ['xxxxxx.XX','xxxxxx.XX']，默认为None\n",
        ":return: 包含股票数据的 pandas DataFrame\n",
-       "\u001b[1;31mFile:\u001b[0m      d:\\dlquant\\load_data\\download_xt_data.py\n",
-       "\u001b[1;31mType:\u001b[0m      function"
+       "\u001B[1;31mFile:\u001B[0m      d:\\dlquant\\load_data\\download_xt_data.py\n",
+       "\u001B[1;31mType:\u001B[0m      function"
       ]
      },
      "metadata": {},
@@ -286,8 +290,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6aaa4bb6-76bd-41ce-b60f-d79cfd994676",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['time', 'open', 'high', 'low', 'close', 'volume', 'amount',\n",
+       "       'settelementPrice', 'openInterest', 'preClose', 'suspendFlag',\n",
+       "       'stock_code'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6a7cca33-1861-4a17-b9c7-55df6f77c3d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.reset_index of                    time      open      high       low     close        amount\n",
+       "date                                                                         \n",
+       "20160104  1451836800000  3536.588  3538.689  3295.740  3296.258  2.409292e+11\n",
+       "20160105  1451923200000  3196.651  3328.138  3189.604  3287.710  3.284172e+11\n",
+       "20160106  1452009600000  3291.194  3362.973  3288.933  3361.840  2.852432e+11\n",
+       "20160107  1452096000000  3309.657  3309.657  3115.885  3125.001  7.998199e+10\n",
+       "20160108  1452182400000  3194.625  3235.451  3056.877  3186.412  3.241671e+11\n",
+       "...                 ...       ...       ...       ...       ...           ...\n",
+       "20241028  1730044800000  2228.078  2236.472  2198.886  2229.118  5.756032e+11\n",
+       "20241029  1730131200000  2231.824  2239.262  2175.813  2177.306  6.316393e+11\n",
+       "20241030  1730217600000  2156.277  2179.944  2127.633  2151.515  5.564708e+11\n",
+       "20241031  1730304000000  2145.655  2204.859  2130.268  2164.461  6.488574e+11\n",
+       "20241101  1730390400000  2149.938  2166.521  2120.725  2123.738  6.006182e+11\n",
+       "\n",
+       "[6501 rows x 6 columns]>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['time', 'open', 'high', 'low', 'close', 'amount']].reset_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d5e2a8a1-a978-46ca-b9de-5f1cc13f59f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***** xtdata连接成功 *****\n",
+      "服务信息: {'tag': 'sp3', 'version': '1.0'}\n",
+      "服务地址: 127.0.0.1:58610\n",
+      "数据路径: C:\\e_trader\\bin.x64/../userdata_mini/datadir\n",
+      "设置xtdata.enable_hello = False可隐藏此消息\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[32m2024-11-03 08:35:05 | INFO     | download_xt_data:37 - 成功下载股票数据：510050.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:05 | INFO     | download_xt_data:37 - 成功下载股票数据：510300.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:05 | INFO     | download_xt_data:37 - 成功下载股票数据：510500.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:06 | INFO     | download_xt_data:37 - 成功下载股票数据：511260.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:06 | INFO     | download_xt_data:37 - 成功下载股票数据：511010.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:06 | INFO     | download_xt_data:37 - 成功下载股票数据：512010.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:06 | INFO     | download_xt_data:37 - 成功下载股票数据：512040.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:06 | INFO     | download_xt_data:37 - 成功下载股票数据：512200.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:06 | INFO     | download_xt_data:37 - 成功下载股票数据：512690.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:06 | INFO     | download_xt_data:37 - 成功下载股票数据：512290.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:06 | INFO     | download_xt_data:37 - 成功下载股票数据：512900.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:07 | INFO     | download_xt_data:37 - 成功下载股票数据：513050.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:07 | INFO     | download_xt_data:37 - 成功下载股票数据：513100.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:07 | INFO     | download_xt_data:37 - 成功下载股票数据：513500.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:07 | INFO     | download_xt_data:37 - 成功下载股票数据：513880.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:07 | INFO     | download_xt_data:37 - 成功下载股票数据：515070.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:07 | INFO     | download_xt_data:37 - 成功下载股票数据：515100.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:07 | INFO     | download_xt_data:37 - 成功下载股票数据：515180.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:07 | INFO     | download_xt_data:37 - 成功下载股票数据：515220.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:07 | INFO     | download_xt_data:37 - 成功下载股票数据：515250.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:07 | INFO     | download_xt_data:37 - 成功下载股票数据：515290.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:08 | INFO     | download_xt_data:37 - 成功下载股票数据：515880.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:08 | INFO     | download_xt_data:37 - 成功下载股票数据：516150.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:08 | INFO     | download_xt_data:37 - 成功下载股票数据：518800.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:08 | INFO     | download_xt_data:37 - 成功下载股票数据：588000.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:08 | INFO     | download_xt_data:37 - 成功下载股票数据：588120.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:08 | INFO     | download_xt_data:37 - 成功下载股票数据：588200.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:08 | INFO     | download_xt_data:37 - 成功下载股票数据：600733.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:08 | INFO     | download_xt_data:37 - 成功下载股票数据：601127.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:08 | INFO     | download_xt_data:37 - 成功下载股票数据：601838.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:09 | INFO     | download_xt_data:37 - 成功下载股票数据：159770.SZ\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:09 | INFO     | download_xt_data:37 - 成功下载股票数据：159811.SZ\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:09 | INFO     | download_xt_data:37 - 成功下载股票数据：159825.SZ\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:09 | INFO     | download_xt_data:37 - 成功下载股票数据：159857.SZ\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:09 | INFO     | download_xt_data:37 - 成功下载股票数据：159867.SZ\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:09 | INFO     | download_xt_data:37 - 成功下载股票数据：159869.SZ\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:09 | INFO     | download_xt_data:37 - 成功下载股票数据：159892.SZ\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:09 | INFO     | download_xt_data:37 - 成功下载股票数据：159936.SZ\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:09 | INFO     | download_xt_data:37 - 成功下载股票数据：159980.SZ\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:09 | INFO     | download_xt_data:37 - 成功下载股票数据：159981.SZ\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:10 | INFO     | download_xt_data:37 - 成功下载股票数据：159985.SZ\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:10 | INFO     | download_xt_data:37 - 成功下载股票数据：159998.SZ\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:10 | INFO     | download_xt_data:37 - 成功下载股票数据：161226.SZ\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:11 | INFO     | download_xt_data:37 - 成功下载股票数据：000001.SH\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:11 | INFO     | download_xt_data:37 - 成功下载股票数据：399001.SZ\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:11 | INFO     | download_xt_data:37 - 成功下载股票数据：399006.SZ\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:11 | INFO     | multivariate_timeseries:210 - 数据 'train' 已保存到 D:\\dlquant\\data\\precessed_data\\train.pkl\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:11 | INFO     | multivariate_timeseries:210 - 数据 'val' 已保存到 D:\\dlquant\\data\\precessed_data\\val.pkl\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:11 | INFO     | multivariate_timeseries:210 - 数据 'test' 已保存到 D:\\dlquant\\data\\precessed_data\\test.pkl\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:11 | INFO     | multivariate_timeseries:210 - 数据 'past_covariates' 已保存到 D:\\dlquant\\data\\precessed_data\\past_covariates.pkl\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:11 | INFO     | multivariate_timeseries:210 - 数据 'future_covariates' 已保存到 D:\\dlquant\\data\\precessed_data\\future_covariates.pkl\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:11 | INFO     | multivariate_timeseries:210 - 数据 'scaler_train' 已保存到 D:\\dlquant\\data\\precessed_data\\scaler_train.pkl\u001B[0m\n",
+      "\u001B[32m2024-11-03 08:35:11 | INFO     | multivariate_timeseries:210 - 数据 'scaler_past' 已保存到 D:\\dlquant\\data\\precessed_data\\scaler_past.pkl\u001B[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "from load_data.multivariate_timeseries import generate_processed_series_data\n",
+    "data = generate_processed_series_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "43e7e1c7-ce20-4c06-b0eb-784abc2abe1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "component\n",
+       "159770.SZ    155.0\n",
+       "159811.SZ    159.0\n",
+       "159825.SZ    136.0\n",
+       "159857.SZ    157.0\n",
+       "159867.SZ    141.0\n",
+       "159869.SZ    184.0\n",
+       "159892.SZ    177.0\n",
+       "159936.SZ    101.0\n",
+       "159980.SZ     72.0\n",
+       "159981.SZ    100.0\n",
+       "159985.SZ     96.0\n",
+       "159998.SZ    171.0\n",
+       "161226.SZ    103.0\n",
+       "510050.SH     84.0\n",
+       "510300.SH     84.0\n",
+       "510500.SH    110.0\n",
+       "511010.SH      0.0\n",
+       "511260.SH      0.0\n",
+       "512010.SH    136.0\n",
+       "512040.SH     95.0\n",
+       "512200.SH    154.0\n",
+       "512290.SH    143.0\n",
+       "512690.SH    154.0\n",
+       "512900.SH    137.0\n",
+       "513050.SH    151.0\n",
+       "513100.SH     88.0\n",
+       "513500.SH     84.0\n",
+       "513880.SH    111.0\n",
+       "515070.SH    173.0\n",
+       "515100.SH     96.0\n",
+       "515180.SH     87.0\n",
+       "515220.SH    150.0\n",
+       "515250.SH    163.0\n",
+       "515290.SH    100.0\n",
+       "515880.SH    176.0\n",
+       "516150.SH    153.0\n",
+       "518800.SH     71.0\n",
+       "588000.SH    151.0\n",
+       "588120.SH    158.0\n",
+       "588200.SH    175.0\n",
+       "600733.SH    204.0\n",
+       "601127.SH    201.0\n",
+       "601838.SH    157.0\n",
+       "dtype: float32"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['val'].pd_dataframe().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b79dca3e-819c-493c-84f4-20f3e3a678b7",
    "metadata": {},
    "outputs": [],
    "source": []
